# claude-agent

./: README.md  pyproject.toml
.github/: copilot-instructions.md
src/: main.py  quick_start.py  sandbox.py
src/claude_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
